# VRC-Circle

./: .gitignore  LICENSE  README.md  index.html  package.json  tailwind.config.js  test.html
src/: App.css  App.tsx  devtools-animations.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: database_studio.rs  http_common.rs  lib.rs  log_manager.rs  main.rs  vrchat_status.rs
src-tauri/src/store/: account_store.rs  db.rs  image_cache.rs  mod.rs  settings_store.rs  user_store.rs
src-tauri/src/vrchat_api/: client.rs  error.rs  mod.rs
src-tauri/src/vrchat_api/types/: auth.rs  avatar.rs  enums.rs  mod.rs  two_factor.rs  user.rs  world.rs
src-tauri/src/websocket/: client.rs  mod.rs  types.rs
src/components/: AccountMenu.tsx  AlertBarContainer.tsx  CachedImage.tsx  DevTools.tsx  FriendsSidebar.tsx  LoginRequired.tsx  Navbar.tsx  Sidebar.tsx  UserAvatar.tsx  theme-provider.tsx  theme-toggle.tsx  toaster.tsx
src/context/: AuthContext.tsx
src/hooks/: useCachedImage.ts  useToast.ts  useVRChatStatus.ts
src/i18n/: config.ts
src/layouts/: MainLayout.tsx
src/lib/: user.ts  utils.ts
src/pages/: Avatars.tsx  DatabaseStudio.tsx  Home.tsx  Login.tsx  Logs.tsx  Profile.tsx  Settings.tsx  StoreStudio.tsx  Verify2FA.tsx  Worlds.tsx
src/services/: account.ts  database.ts  image-cache.ts  logs.ts  settings.ts  storeRegistry.tsx  vrchat.ts  websocket.ts
src/stores/: account-scope.ts  accounts-store.ts  alert-store.ts  avatars-store.ts  developer-mode-store.ts  index.ts  resource-store.ts  singleton-registry.ts  user-store.ts  vrchat-status-store.ts  worlds-store.ts
src/types/: bindings.ts  errors.ts  (+1 more)
(+13 files in other folders)
